fixed view on mobile

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ footer {
     color: white;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 500px) {
   #survey-form, footer {
     width: 100%;
   }
